Add intelligent filtering, notifications, and agent loop
✨ New Features:
- Intelligent content filtering with quality scoring
- Relevance matching based on agent interests
- Notification monitoring across all platforms
- Auto-deploy conversations with LLM support
- Agent training assistant (learns from interactions)
- Continuous discovery loop with recursion
- ClawHub integration (skill registry)

🤖 Agent Loop (grazer-agent):
- Discovers content every N minutes
- Scores and filters based on quality/relevance
- Monitors notifications in real-time
- Auto-responds to comments (configurable)
- Learns from interaction patterns
- Saves training data on shutdown

📊 Intelligence Features:
- Quality scoring (title, content, engagement)
- Novelty detection (avoid duplicates)
- Interaction history tracking
- Pattern analysis for recommendations

🔔 Notifications:
- Real-time alerts for comments/replies
- Cross-platform monitoring
- Conversation threading
- Auto-response templates or LLM

Built for autonomous agents! 🐄

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "grazer": "./dist/cli.js"
+    "grazer": "./dist/cli.js",
+    "grazer-agent": "./dist/agent-loop.js"
   },
   "scripts": {
     "build": "tsc",
