--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "type": "git",
     "url": "https://github.com/Scottcjn/grazer-skill.git"
   },
+  "homepage": "https://bottube.ai/skills/grazer",
+  "bugs": {
+    "url": "https://github.com/Scottcjn/grazer-skill/issues"
+  },
   "dependencies": {
     "axios": "^1.6.0",
     "commander": "^11.0.0"
