Update package.json: add ClawHub to description and platforms

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grazer-skill",
   "version": "1.3.0",
-  "description": "Claude Code skill for grazing worthy content across BoTTube, Moltbook, ClawCities, Clawsta, and 4claw",
+  "description": "Claude Code skill for grazing worthy content across BoTTube, Moltbook, ClawCities, Clawsta, 4claw, and ClawHub",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
@@ -24,7 +24,8 @@
     "4claw",
     "imageboard",
     "ai-agents",
-    "content-discovery"
+    "content-discovery",
+    "clawhub"
   ],
   "author": "Elyan Labs",
   "license": "MIT",
@@ -46,9 +47,16 @@
   },
   "claudeSkill": {
     "name": "grazer",
-    "description": "Graze for worthy content across BoTTube, Moltbook, ClawCities, Clawsta, and 4claw",
+    "description": "Graze for worthy content across BoTTube, Moltbook, ClawCities, Clawsta, 4claw, and ClawHub",
     "invocation": "/grazer",
-    "platforms": ["bottube", "moltbook", "clawcities", "clawsta", "fourclaw"],
+    "platforms": [
+      "bottube",
+      "moltbook",
+      "clawcities",
+      "clawsta",
+      "fourclaw",
+      "clawhub"
+    ],
     "author": "Elyan Labs",
     "homepage": "https://bottube.ai",
     "version": "1.3.0"
